<resources>
    <string name="app_name">TodoApp</string>
    <string name="login_google">Đăng nhập bằng google</string>
    <string name="login_facebook">Đăng nhập bằng facebook</string>
    <string name="rules"><u>Điều khoản</u></string>
    <string name="and"> và </string>
    <string name="privacy_policy"><u>chính sách bảo mật</u></string>
    <string name="title_login">Group to-do xin chào bạn</string>
    <string name="search">Tìm kiếm</string>
    <string name="navigaton_content_open">Mở</string>
    <string name="navigaton_content_close">Đóng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Tác vụ</string>
    <string name="message">Tin nhắn</string>
    <!--    login activity-->
    <string name="error_login_google">Đăng nhập thất bại, mã lỗi </string>
    <string name="fall_login">Đăng nhập thất bại</string>
    <string name="add_todo">Thêm</string>
    <string name="my_todo">Tác vụ của tôi</string>
    <string name="group_todo">Tác vụ nhóm</string>
    <string name="menu_todo_done">Hoàn thành</string>
    <string name="menu_todo_new">Mới</string>
    <string name="menu_todo_fall">Thất bại</string>
    <string name="today">Hôm nay</string>
    <string name="bookmark">Danh sách quan trọng</string>
    <string name="list_todo">Danh sách tác vụ</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="sort">Sắp xếp</string>
    <string name="change_theme">Thay đổi chủ đề</string>
</resources>